chore: attempt to fix container spacing issues

--- a/src/page-components/collections/framework-field-guide/segments/the-rest-container.module.scss
+++ b/src/page-components/collections/framework-field-guide/segments/the-rest-container.module.scss
@@ -4,4 +4,5 @@
     color: var(--on-dark-emphasis-high);
     transition: background var(--color-transition-time) var(--color-transition-ease), color var(--color-transition-time) var(--color-transition-ease);
     will-change: transition;
+    margin-top: -4px;
 }
